- Currently untested new CheckInLabel interface and provider along with a ChildrenLabelProvider implementation.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\com.centralaz.Accountability\packages.config" />
   <repository path="..\com.centralaz.Authentication\packages.config" />
   <repository path="..\com.centralaz.Baptism\packages.config" />
+  <repository path="..\com.centralaz.CheckInLabels\packages.config" />
   <repository path="..\com.centralaz.DpsMatch\packages.config" />
   <repository path="..\com.centralaz.Finance\packages.config" />
   <repository path="..\com.centralaz.GeneralJobs\packages.config" />
